--- a/GenericoGerry/gerry2/ejercicioPosicionamientoNormal2/css/style.css
+++ b/GenericoGerry/gerry2/ejercicioPosicionamientoNormal2/css/style.css
@@ -5,12 +5,35 @@ p{
 ul{
 	font-weight:bold;
 }
+
+.foto{
+	background-color:#F7D10E;
+	width:8%;
+	height:15%;
+	
+
+}
+
 #cabecera{
 	background-color:#F7D10E;
 	width:100%;
 	height:15%;
+	
 
+}
 
+.pprincipal{
+
+	font-size:50px;
+	margin-top: -160px;
+	
+}
+.wiki{
+
+	width: 70px;
+	height:70px;
+	margin-left: 50px;
+	margin-top: 20px;
 }
 
 #menu{
@@ -94,4 +117,3 @@ table, th, td {
 }
 
 
-}
