--- a/GenericoGerry/gerry2/ejercicioPosicionamientoNormal/css/style.css
+++ b/GenericoGerry/gerry2/ejercicioPosicionamientoNormal/css/style.css
@@ -2,7 +2,6 @@ body{
 	background-color:75D6FF;
 	font-family:arial;
 	font-weight:bold;
-	padding:10px;
 	width:100%;
 	height:100%;
 	
@@ -13,20 +12,20 @@ p{
 #cabecera{
 	background-color:red;
 	height:15%;
+	width:100%;
 }
 #navegacion{
 	background-color:orange;
 	width:30%;
-	height:50%;
-	float:right;
+	height:65%;
+	float:left;
 	
 }
 #contenido{
 	background-color:pink;
 	
 	width:70%;
-	height:50%;
-	position:absolute;
+	height:65%;
 	left:465px;
 	bottom:205px;
 	float:left;
